--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     padding: 0;
 }
 
-#background-video {
+#background-image {
     position: fixed;
     top: 0;
     left: 0;
@@ -32,7 +32,13 @@ html {
 }
 
 p {
-    color: rgb(75, 75, 75);
+    color: #FAF9F6;
+}
+
+.logo {
+    color: #F5F5F5;
+    text-shadow: 5px 0 10px rgba(255, 255, 255, 0.6);
+    font-weight: 300;
 }
 
 /* Transition */
@@ -60,13 +66,12 @@ nav {
 }
 
 a {
-    color: black;
+    color: #FAF9F6;
     text-decoration: none;
-    text-decoration-color: white;
+    text-decoration-color: #FAF9F6;
 }
 
 a:hover {
-    color: gray;
     text-decoration: underline;
     text-underline-offset: 0.8rem; 
     text-decoration-color: rgb(8, 155, 247);
@@ -105,7 +110,7 @@ a:hover {
 .hamburger-icon span {
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: #FAF9F6;
     transition: all 0.3 ease-in-out;
 }
 
@@ -113,7 +118,7 @@ a:hover {
     position: relative;
     top: 100%;
     right: 0%;
-    background-color: white;
+    background-color: #FAF9F6;
     width: fit-content;
     max-height: 0;
     overflow: hidden;
@@ -190,14 +195,23 @@ opacity: 0;
 
 .section__pic-container {
     display: flex;
-    margin: auto 0;
-    width: 350px;
-    height: 350px;
+    position:relative;    
+    width: 200px;
+    height: 300px;
+    max-width: 300px;
+    max-height: 300px;
     object-fit: cover;
+    margin: auto 0;
+}
+
+.pic {
+    width: 500px;
+    height: 500px;
+    margin: -100px 10px;
 }
 
 .section__text {
-
+    color: #FAF9F6;
     align-self: center;
     text-align: center;
 }
@@ -210,6 +224,7 @@ opacity: 0;
 .section__text__p1 {
 
     text-align: center;
+    color: white;
 
 }
 
@@ -221,8 +236,10 @@ opacity: 0;
 }
 
 .title{
-    font-size: 3rem;
+    font-size: 3.5rem;
     text-align: center;
+    color: #F5F5F5;
+    text-shadow: grey;
 }
 
 #socials-containers {
@@ -252,7 +269,7 @@ opacity: 0;
 }
 
 .btn {
-    font-weight: 600;
+    font-weight: 550;
     transition: all 300ms ease;
     padding: 1rem;
     width: 8rem;
@@ -261,7 +278,7 @@ opacity: 0;
 }
 
 .btn-color-1, .btn-color-2 {
-    border: rgb(53, 53, 53) 0.1rem solid;
+    border: #FAF9F6 0.1rem solid;
 }
 
 .btn-color-1:hover, .btn-color-2:hover {
@@ -269,22 +286,29 @@ opacity: 0;
 
 }
 
-.btn-color-1, .btn-color-2:hover {
-background: rgb(53, 53, 53);    
-color: white;
-}
-
-.btn-color-1:hover{
-    background-color: rgb(0, 0, 0);
+.btn-color-1 {
+    color: white;
+    background-color: transparent;
 }
 
 .btn-color-2 {
-    background: none;
+color: white;
 }
 
 .btn-color-2:hover {
-
     border: rgb(255, 255, 255) 0.1rem solid;
+    background-color: #FAF9F6;
+    color: black;
+}
+
+.btn-color-1:hover{
+    background-color: #FAF9F6;
+    color: black;
+}
+
+
+.btn-color-2 {
+    background: none;
 }
 
 .btn-container {
@@ -292,6 +316,27 @@ color: white;
 } 
 
 /*About section*/
+
+.btn-color-3 {
+    font-weight: 550;
+    transition: all 300ms ease;
+    padding: 1.1rem;
+    width: 9rem;
+    border-radius: 2rem;
+    background-color: transparent;
+    color: #FAF9F6;
+    border: #FAF9F6 0.1rem solid
+}
+
+.btn3{
+    padding: 1rem;
+}
+
+.btn-color-3:hover {
+    background-color: #FAF9F6;
+    color: black;
+    cursor: pointer;
+}
 
 #about{
     position: relative;
@@ -321,9 +366,9 @@ color: white;
 }
 
 .arrow {
-    position: absolute;
-    right: 2rem;
-    bottom: 2.5rem;
+    position:absolute;
+    right: 50%;
+    bottom: 2rem;
 }
 
 .details-container {
@@ -334,6 +379,11 @@ color: white;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(0, 0, 0);
     text-align: center;
+    color: black;
+}
+
+.box-text {
+    color: black;
 }
 
 .section-container {
