--- a/style.css
+++ b/style.css
@@ -184,6 +184,34 @@ opacity: 0;
     display: flex;
  }
 
+
+ /* Name */
+
+ .name-title {
+    font-family: monospace; /* Use a monospace font to make it look like a typewriter */
+    font-size: 50px;
+    color: #FFFF;
+  }
+  
+  .name-title span {
+    overflow: hidden; /* Hide the text initially */
+    white-space: nowrap; /* Keep the text on a single line */
+    border-right: 2px solid #333; /* Add a blinking cursor effect */
+    animation: blink 1s infinite; /* Animate the cursor blinking */
+  }
+  
+  @keyframes blink {
+    0% {
+      border-color: #333;
+    }
+    50% {
+      border-color: transparent;
+    }
+    100% {
+      border-color: #333;
+    }
+  }
+
  /* Profile section */
 
  #profile {
@@ -198,16 +226,18 @@ opacity: 0;
     position:relative;    
     width: 200px;
     height: 300px;
-    max-width: 300px;
+    max-width: 500px;
     max-height: 300px;
     object-fit: cover;
-    margin: auto 0;
+    margin: aut;
+    left: auto;
 }
 
 .pic {
     width: 500px;
     height: 500px;
     margin: -100px 10px;
+
 }
 
 .section__text {
@@ -232,7 +262,19 @@ opacity: 0;
 
     font-size: 1.75rem;
     margin-bottom: 1rem;
-    
+    animation: blink 1s infinite;
+}
+
+@keyframes section__text__p2 {
+      0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .title{
@@ -252,10 +294,14 @@ opacity: 0;
 /* Icons */
 
 .icon {
-
     cursor: pointer;
     height: 3rem;
     padding: 0.5rem 0.5rem;
+    transition: transform 0.3s;
+}
+
+.icon:hover{
+    transform: scale(1.08);
 }
 
 /* Buttons */
@@ -358,7 +404,19 @@ color: white;
 
 .about-containers, .about-details-container {
     display: flex;
+}
 
+.text-container{
+    font-family: 'Merriweather', serif; /* or any other professional font */
+    font-size: 17px;
+    line-height: 1.5; /* adjust to your liking */
+    letter-spacing: 0.05em;
+    margin-bottom: 1.5em; /* add space between paragraphs */
+    text-align: justify; /* justify text to create a clean, organized appearance */
+    hyphens: auto; /* enable automatic hyphenation */
+    overflow-wrap: break-word;
+    margin-right: 25px;
+    margin-left: 25px;
 }
 
 .about-pic {
@@ -369,17 +427,31 @@ color: white;
     position:absolute;
     right: 50%;
     bottom: 2rem;
+    transition: transform 0.3s;
+}
+
+.arrow:hover{
+    transform: scale(1.08);
+
 }
 
 .details-container {
     padding: 1.5rem;
     flex: 1;
-    background: rgb(255, 255, 255, 0.5);
     border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
-    border-color: rgb(0, 0, 0);
+    background-color: #B0B0B0;
+    border: 0.1rem solid #ddd;
+    border-color: #f0f0f0;
     text-align: center;
     color: black;
+    margin-right: 25px;
+    width: 200px;
+    height: 140px;
+    transition: transform 0.3s;
+}
+
+.details-container:hover {
+    transform: scale(1.08);
 }
 
 .box-text {
@@ -417,6 +489,38 @@ height: 80%;
     flex-direction: column;
 }
 
+.work-details {
+    display: block;
+    justify-content: center;
+    width: 100%;
+    
+}
+
+.work-head{
+    font-family: 'Playfair Display', serif;
+    color: #F5F5F5;
+    padding: 1.5rem;
+    display: block;
+    flex-direction: row;
+    text-align:left;
+    margin-left: 3px;
+    text-decoration: underline;
+    text-underline-offset: 0.3rem;
+}
+
+.detail-container {
+    padding: 15px;
+    flex: 2;
+    display: block;
+    background: rgb(255, 255, 255, 0.5);
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(0, 0, 0);
+    text-align: center;
+    color: black;
+    margin: 25px;
+}
+
 .article-container {
     display: flex;
     text-align: initial;
@@ -425,6 +529,8 @@ height: 80%;
     gap: 2rem;
     justify-content: space-around;
 }
+
+
 
 .article {
     display: flex;
@@ -444,6 +550,13 @@ article .icon{
     justify-content: center;
     flex-direction: column;
     height: 70vh;
+}
+
+.contact-title{
+    font-size: 2.5rem;
+    text-align: center;
+    color: #F5F5F5;
+    text-shadow: grey;
 }
 
 .contact-info-upper-container {
