--- a/style.css
+++ b/style.css
@@ -95,43 +95,47 @@ a:hover {
 .hamburger-menu {
     position: relative;
     display: inline-block;
-    z-index: 1;
 }
 
 .hamburger-icon{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 30px;
+    height: 24px;
     width: 30px;
     cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+}
+
+.hamburger-icon.open {
+    transition: transform 0.3s ease-in-out;
 }
 
 .hamburger-icon span {
     width: 100%;
     height: 2px;
     background-color: #FAF9F6;
-    transition: all 0.3 ease-in-out;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
 
 .menu-links {
-    position: relative;
+    position: absolute;
     top: 100%;
     right: 0%;
-    background-color: #FAF9F6;
+    background-color: transparent;
     width: fit-content;
     max-height: 0;
     overflow: hidden;
-    transition: all 0.3 ease-in-out;
-    z-index: 1;
+    transition: max-height 0.3s ease-in-out;
+    text-align: center;
 }
 
-.menu-links {
-    display: block;
+.menu-links a {
+display: block;
 padding: 10px;
 text-align: center;
 font-size: 1.5rem;
-color: black;
+color: #F5F5F5;
 text-decoration: none;
 transition: all 0.3 ease-in-out;
 }
@@ -144,18 +148,22 @@ transition: all 0.3 ease-in-out;
 
 .menu-links.open {
     max-height: 300px;
+    transition: max-height 0.3s ease-in-out;
 }
 
 .hamburger-icon.open span:first-child {
     transform: rotate(45deg) translate(10px, 5px);
+    transition: transform 0.3s ease-in-out;
 }
 
 .hamburger-icon.open span:nth-child(2) {
 opacity: 0;
+transition: opacity 0.3s ease-in-out;
 }
 
 .hamburger-icon.open span:last-child {
     transform: rotate(-45deg) translate(10px, -5px);
+    transition: transform 0.3s ease-in-out;
 }
 
 .hamburger-icon span:first-child {
@@ -191,6 +199,7 @@ opacity: 0;
     font-family: monospace; /* Use a monospace font to make it look like a typewriter */
     font-size: 50px;
     color: #FFFF;
+ 
   }
   
   .name-title span {
@@ -198,6 +207,9 @@ opacity: 0;
     white-space: nowrap; /* Keep the text on a single line */
     border-right: 2px solid #333; /* Add a blinking cursor effect */
     animation: blink 1s infinite; /* Animate the cursor blinking */
+    align-self: center;
+    text-align: center;
+    flex: 10;
   }
   
   @keyframes blink {
@@ -219,6 +231,7 @@ opacity: 0;
     justify-content: center;
     gap: 5rem;
     height: 80vh;
+    align-items: center;
  }
 
 .section__pic-container {
@@ -229,8 +242,7 @@ opacity: 0;
     max-width: 500px;
     max-height: 300px;
     object-fit: cover;
-    margin: aut;
-    left: auto;
+    margin: auto;
 }
 
 .pic {
@@ -362,6 +374,19 @@ color: white;
 } 
 
 /*About section*/
+
+.section__pic-container-1{
+    display: flex;
+    position:relative;    
+    width: 300px;
+    height: 300px;
+    max-width: 300px;
+    max-height: 300px;
+    object-fit: cover;
+    margin: 50px;
+    left: auto;
+    top: 25px;
+}
 
 .btn-color-3 {
     font-weight: 550;
@@ -506,6 +531,13 @@ height: 80%;
     margin-left: 3px;
     text-decoration: underline;
     text-underline-offset: 0.3rem;
+}
+
+.icon-e {
+    cursor: default;
+    height: 3rem;
+    padding: 0.5rem 0.5rem;
+    transition: transform 0.3s;
 }
 
 .detail-container {
