--- a/media.css
+++ b/media.css
@@ -1,3 +1,4 @@
+
 @media screen and (max-width: 2000px) {
     #profile {
         height: 83vh;
@@ -7,11 +8,96 @@
 
     .about-containers{
         flex-wrap: wrap;
-
     }
 
+}
+
+@media screen and (max-width: 414px) {
+
+    .name-title span{
+        font-size: 30px;
+        margin-right: 26px;
+        max-width: 300px;
+        text-align: center;
+        width:  50%;
+        margin: 0 auto;
+    }
+
+    .section__pic-container{
+        margin-left: 35px;
+    }
+
+    .btn-container{
+        max-width: 400px;
+        flex: 0;
+    }
+
+    .socials-container{
+        width: 300px;
+    }
+
+    .section__text {
+        width: 350px;
+        align-items: center;
+        margin-left: 10px;
+    }
 
 } 
+
+@media screen and (max-width: 375px) {
+
+    .section__pic-container{
+        margin-left: 20px;
+    }
+    .section__text__p1{
+        max-width: 250px;
+margin-left: 40px;    }
+.logo{
+    font-size: 25px;
+}
+    .name-title{
+        max-width: 275px;
+    }
+
+    .btn-container{
+        margin-right: 22px;
+    }
+
+ .name-title span{
+    font-size: 30px;
+    margin-left: 43px;
+    max-width: 275px;
+    text-align: center;
+    width:  50%;
+ }
+ 
+ .section__text__p1{
+    margin-top: 3 5px;
+ }
+
+} 
+
+@media screen and (max-width: 412px) {
+
+    .section__pic-container-1{
+        right: 14px;
+    }
+
+} 
+
+@media screen and (max-width: 1400px) {
+
+    #profile {
+        height: 83vh;
+        margin-bottom: 6rem;
+    }
+
+    .about-containers{
+        flex-wrap: wrap;
+    }
+
+} 
+
 
 @media screen and (max-width: 1200px) {
     #desktop-nav {
@@ -39,7 +125,7 @@
     }
 
     section {
-        margin: 0 10%;
+        margin: 0 5%;
     }
 
     .section_pic-container {
@@ -50,6 +136,72 @@
     .about-containers {
         margin-top: 0;
     }
+} 
+
+@media screen and (max-width: 430px) {
+
+    .name-title span{
+        font-size: 37px;
+        margin-right: 26px;
+        max-width: 300px;
+        text-align: center;
+        width:  50%;
+        margin: 0 auto;
+    }
+
+    .section__pic-container{
+        margin-left: 35px;
+    }
+
+    .section__pic-container-1{
+        right: 8px;
+    }
+
+    .btn-container{
+        max-width: 400px;
+        flex: 0;
+    }
+
+    .socials-container{
+        width: 300px;
+    }
+
+    .section__text {
+        width: 350px;
+        align-items: center;
+        margin-left: 10px;
+    }
+
+    .details-container{
+        margin-right: 2px;
+        padding-bottom: 65px;
+    }
+
+    .work-head{
+        font-size: 23px;
+    }
+
+    #contact, footer{
+        padding-top: 30px;
+        height: 20vh;
+    }
+
+    .nav-links-container{
+        padding-bottom: 50px;
+        bottom: 20px;
+        position: relative;
+        top: 110px;
+    }
+    footer{
+        position: relative;
+        top: 140px;
+    }
+
+    footer p {
+        position: relative;
+        top: 90px;
+    }
+
 } 
 
 @media screen and (max-width: 600px) {
@@ -81,5 +233,3 @@ margin-left: -0.5rem;
     }
     
 }
-
-
