--- a/style.css
+++ b/style.css
@@ -313,6 +313,7 @@ transition: opacity 0.3s ease-in-out;
     display: flex;
     justify-content: center;
     gap: 1rem;
+    padding: 15px;
 
 }
 
